--- a/TestMaven2/test-output/old/Default suite/methods.html
+++ b/TestMaven2/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d079a3">  <td>21/05/15 15:30:35</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPagewithPageFactory.beforeTest()[pri:0, instance:TestPage.LoginPagewithPageFactory@77f1baf5]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@282496973</td>   <td></td> </tr>
-<tr bgcolor="d079a3">  <td>21/05/15 15:30:43</td>   <td>7272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPagewithPageFactory.testCreateAccount()[pri:0, instance:TestPage.LoginPagewithPageFactory@77f1baf5]">testCreateAccount</td> 
-  <td>main@282496973</td>   <td></td> </tr>
-<tr bgcolor="d079a3">  <td>21/05/15 15:30:51</td>   <td>15763</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPagewithPageFactory.afterTest()[pri:0, instance:TestPage.LoginPagewithPageFactory@77f1baf5]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@282496973</td>   <td></td> </tr>
+<tr bgcolor="d079a3">  <td>21/05/31 18:18:12</td>   <td>0</td> <td title="&gt;&gt;NewTest.BeforeSuite()[pri:0, instance:TestNG.NewTest@38afe297]">&gt;&gt;BeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1112414583</td>   <td></td> </tr>
+<tr bgcolor="d079a3">  <td>21/05/31 18:18:27</td>   <td>14586</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.BeforeTest()[pri:0, instance:TestNG.NewTest@38afe297]">&gt;&gt;BeforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1112414583</td>   <td></td> </tr>
+<tr bgcolor="d079a3">  <td>21/05/31 18:18:32</td>   <td>20067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.FirstTest()[pri:0, instance:TestNG.NewTest@38afe297]">FirstTest</td> 
+  <td>main@1112414583</td>   <td></td> </tr>
+<tr bgcolor="d079a3">  <td>21/05/31 18:21:08</td>   <td>176491</td> <td title="&lt;&lt;NewTest.AfterSuite()[pri:0, instance:TestNG.NewTest@38afe297]">&lt;&lt;AfterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1112414583</td>   <td></td> </tr>
 </table>
